--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="turn"></h1>
+        <div class="header">
+            <h1 class="turn"></h1>
+        </div>
         <div class="board"></div>
     </div>
     <script src="index.js"></script>
