--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <h1 class="turn"></h1>
         </div>
         <div class="board"></div>
+        <div>
+            <button class="refresh">Restart</button>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
