--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
     <div class="container">
         <div class="header">
             <h1 class="turn"></h1>
+            <form class="name-form">
+                <label for="player-one">Player One Name:</label>
+                <input type="text" name="player-one" id="player-one">
+                <label for="player-two">Player Two Name:</label>
+                <input type="text" name="player-two" id="player-two">
+                <button class="start-button">Start Game</button>
+            </form>
         </div>
         <div class="board"></div>
         <div>
-            <button class="refresh">Restart</button>
+            <button id="refresh" class="refresh">Restart</button>
         </div>
     </div>
     <script src="index.js"></script>
