Fix blank header if no player name entered

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <h1 class="turn"></h1>
             <form class="name-form">
                 <label for="player-one">Player One Name:</label>
-                <input type="text" name="player-one" id="player-one">
+                <input type="text" name="player-one" id="player-one" required>
                 <label for="player-two">Player Two Name:</label>
-                <input type="text" name="player-two" id="player-two">
+                <input type="text" name="player-two" id="player-two" required>
                 <button class="start-button">Start Game</button>
             </form>
         </div>
