--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <div class="header">
             <h1 class="turn"></h1>
+            <h2 id="winner-announce" class="winner-announce"></h2>
             <form class="name-form">
                 <label for="player-one">Player One Name:</label>
                 <input type="text" name="player-one" id="player-one" required>
