Make small layout adjustments, add linear gradient to board buttons for dimensionality

--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
                 <button class="start-button">Start Game</button>
             </form>
         </div>
-        <div class="board"></div>
-        <div>
-            <button id="refresh" class="refresh">Restart</button>
+        <div class="board-and-button">
+            <div class="board"></div>
+            <div>
+                <button id="refresh" class="refresh">Restart</button>
+            </div>
+        </div>
+        <div class="footer">
+            Photo by <a href="https://unsplash.com/@vladimir_d?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Volodymyr Dobrovolskyy</a> on <a href="https://unsplash.com/photos/a-park-with-a-playground-and-a-playground-structure-prdrKa0lPDg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
         </div>
     </div>
     <script src="index.js"></script>
