Style name form and reset button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2 id="winner-announce" class="winner-announce"></h2>
             <form class="name-form">
                 <label for="player-one">Player One Name:</label>
-                <input type="text" name="player-one" id="player-one" required>
+                <input type="text" name="player-one" id="player-one" required autofocus>
                 <label for="player-two">Player Two Name:</label>
                 <input type="text" name="player-two" id="player-two" required>
                 <button class="start-button">Start Game</button>
